secondfile/objects/RDS_Hierarchy_del__c.object
<CustomObject>
    <description>To populate data from Cast Iron</description>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <label>Attribute Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <label>Attribute Value</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealHash__c</fullName>
        <label>DealHash</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Name__c</fullName>
        <label>Hierarchy Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <label>RDS-Hierarchy</label>
    <nameField>
        <label>RDS-Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDS-Hierarchy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>